<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="body_header">My Nanodergee Apps!</string>
    <string name="b1_text">popular movies</string>
    <string name="b2_text">stock hawk</string>
    <string name="b3_text">build it bigger</string>
    <string name="b4_text">make your app material</string>
    <string name="b5_text">go ubiquitous</string>
    <string name="b6_text">capstone</string>
</resources>
