<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arshad.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_header"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:layout_marginTop="47dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b1_text"
        android:id="@+id/b1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#2196f3"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="showToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b2_text"
        android:id="@+id/b2"
        android:layout_below="@+id/b1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#009688"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="showToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b3_text"
        android:id="@+id/b3"
        android:layout_below="@+id/b2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#9c27b0"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="showToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b4_text"
        android:id="@+id/b4"
        android:layout_below="@+id/b3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#f44336"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="showToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b5_text"
        android:id="@+id/b5"
        android:layout_below="@+id/b4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#4caf50"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="showToast"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b6_text"
        android:id="@+id/b6"
        android:layout_below="@+id/b5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ff9800"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:onClick="showToast"/>

</RelativeLayout>
